Kill the preview ioslave each time properly so that is frees its Shared Memory.

Note: It seems that the usage of Shared Memory is dangerous, 
as the segments are not freed when the application crashes.

BUG: 131277
CCMAIL: digikam-devel@kde.org


svn path=/trunk/extragear/graphics/digikam/; revision=567460