digikam/imagepreviewjob.cpp
@@ -173,6 +173,12 @@ void ImagePreviewJob::slotImagePreviewData(KIO::Job*, const QByteArray &data)
         stream >> width >> height >> depth;
         preview = QImage(d->shmaddr, width, height, depth,
                          0, 0, QImage::IgnoreEndian);
+
+        // The buffer supplied to the QImage constructor above must remain valid
+        // throughout the lifetime of the object.
+        // This is not true, the shared memory will be freed or reused.
+        // If we pass the object around, we must do a deep copy.
+        preview = preview.copy();
     }
     else
     {
